Project/p4/tests/t059.err
Semantic error on line 1: Invalid right operand for operator '%'.
