Project/p4/tests/t059.gpl
int i = 1 % 42.2;
